--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,13 +1,3 @@
-site_name: 'Docker Kubernetes Linux Proxmox Documentation'
-theme:
-  name: 'material'
-nav:
-  - Home: index.md
-  - Overview: overview.md
-  - Setup: setup.md
-  - Usage: usage.md
-
-
 site_name: PC Magik Docs
 site_url: https://pcmagik.github.io/documentation/
 nav:
@@ -101,5 +91,5 @@ extra:
   consent:
     title: Cookie consent
     description: >- 
-      We use cookies to enhance your experience on our site, recognize your repeat visits and preferences, as well as to track the effectiveness of our documentation and the relevance of the content we provide. Your consent will help us improve our resources and ensure they meet your needs. You have the option to customize your cookie settings to best suit your privacy preferences. Your support in this helps us continually refine our content and tools to better serve you and the community."
+      We use cookies to enhance your experience on our site, recognize your repeat visits and preferences, as well as to track the effectiveness of our documentation and the relevance of the content we provide. Your consent will help us improve our resources and ensure they meet your needs. You have the option to customize your cookie settings to best suit your privacy preferences. Your support in this helps us continually refine our content and tools to better serve you and the community.
 copyright: Copyright &copy; 2025 PC Magik
