--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,9 @@ site_url: https://pcmagik.github.io/
 site_description: Technical documentation and guides for Linux, Docker, Kubernetes and Proxmox
 site_author: PC Magik
 
+# Dodaj tę konfigurację na początku pliku
+docs_dir: docs
+
 # Usuń lub zakomentuj duplikaty site_name i nav z górnej części pliku
 nav:
   - Home: 
@@ -21,8 +24,8 @@ nav:
 #  - About: about.md
 theme:
   name: material
-  logo: images/logo.png
-  favicon: images/favicon.png
+  logo: ../images/logo.png
+  favicon: ../images/favicon.png
   features:
     - navigation.footer
     - content.code.copy
