Update logo and favicon paths in mkdocs configuration
- Move logo and favicon PNG files directly into docs directory
- Update mkdocs.yml to reference new file locations
- Simplify image path configuration

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,8 +24,8 @@ nav:
 #  - About: about.md
 theme:
   name: material
-  logo: ../images/logo.png
-  favicon: ../images/favicon.png
+  logo: logo.png
+  favicon: favicon.png
   features:
     - navigation.footer
     - content.code.copy
