Update LinkedIn profile link in mkdocs configuration

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -94,7 +94,7 @@ extra:
     - icon: fontawesome/brands/github
       link: https://github.com/pcmagik
     - icon: fontawesome/brands/linkedin
-      link: https://www.linkedin.com/in/mateusz-piekut-620b90273/
+      link: https://www.linkedin.com/in/mateusz-piekut/
     - icon: fontawesome/brands/docker
       link: https://hub.docker.com/u/pcmagik
 
