Rename Documentation section to Docker in mkdocs configuration

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,7 +11,7 @@ nav:
   - Home: 
     - Welcome: index.md
     - About Me: about.md
-  - Documentation:
+  - Docker:
     - Overview: overview.md
     - Setup: setup.md
     - Usage: usage.md
