--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,9 @@ nav:
     - Setup Ubuntu: setup_docker_ubuntu.md
     - Setup Debian: setup_docker_debian.md
     - Setup RHEL: setup_docker_rhel.md
+    - Setup Rootless: setup_docker_rootless.md
+    - Setup WSL: setup_docker_wsl.md
+    - Setup Postinstallation: setup_postinstallation.md
   - Kubernetes:
     - Overview: overview.md
     - Setup: setup.md
