Add initial overview section for Docker documentation and update navigation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,7 @@ nav:
     - Welcome: index.md
     - About Me: about.md
   - Docker:
-    - Overview: overview.md
+    - Overview: overview_docker.md
     - Setup Ubuntu: setup_docker_ubuntu.md
     - Setup Debian: setup_docker_debian.md
     - Setup RHEL: setup_docker_rhel.md
